# nut65-pipboy

./: .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  style.css
src/nut65_pipboy/: __main__.py  api.py  app.py  controller.py  hid_device.py  keyboard.py  pixel_font.py  types.py
src/nut65_pipboy/games/: base.py  marquee.py  pong.py  snake.py
